--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-
+import './src/styles/global.css'
+import Information from './components/Information.astro'
 ---
 
 <html lang="en">
@@ -8,9 +9,9 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Muhammad Pen</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<Information />
 	</body>
 </html>
