--- a/src/pages/components/Information.astro
+++ b/src/pages/components/Information.astro
@@ -2,40 +2,119 @@
 
 ---
 
-<div id="container" class="flex flex-col max-w-5xl justify-self-center">
-  <div
-    id="hi-container"
-    class="w-fit m-5 p-5 bg-amber-700/10 border-blur rounded-xl"
-  >
-    {
-      [1, 2, 3, 4, 5].map((font, index) => (
+<div id="container" class="flex flex-wrap w-fit m-5 p-5">
+  {
+    Array(25)
+      .fill(1)
+      .map(() => (
         <>
           <span
-            class={`text-7xl font-extrabold font-sans hover:font-extralight hover:text-8xl transition-all duration-300`}
+            class={`text-9xl font-extrabold font-sans hover:font-extralight transition-all duration-300`}
           >
             Hi.
           </span>
         </>
       ))
-    }
-  </div>
-
-  <p>
-    I am <span class="text-2xl font-extrabold font-mono"
-      >fullstack software engineer</span
-    >
-  </p>
-
-  <p>I work mostly with Typescript.</p>
-  <p>
-    I like building cloud infrastructure with tools like pulumi. I've built on
-    AWS, GCP and Azure
-  </p>
-</div>
-
-<style>
-  .border-blur {
-    box-shadow: 0 0 100px 20px #ad540d;
-    border: none;
   }
-</style>
+  <a
+    href="mailto:muhammadpen@gmail.com"
+    class="text-9xl font-extralight underline hover:font-extrabold transition-all duration-300"
+    >Muhammad</a
+  >
+  {
+    Array(25)
+      .fill(1)
+      .map(() => (
+        <>
+          <span
+            class={`text-9xl font-extrabold font-sans hover:font-extralight transition-all duration-300`}
+          >
+            Hi.
+          </span>
+        </>
+      ))
+  }
+  <span class="text-9xl font-extralight">Fullstack.</span>
+  <span class="text-9xl font-extralight">software.</span>
+  <span class="text-9xl font-extralight">engineer.</span>
+  {
+    Array(25)
+      .fill(1)
+      .map(() => (
+        <>
+          <span
+            class={`text-9xl font-extrabold font-sans hover:font-extralight transition-all duration-300`}
+          >
+            Hi.
+          </span>
+        </>
+      ))
+  }
+  <span class="text-9xl font-extralight">Javascript.</span>
+  {
+    Array(25)
+      .fill(1)
+      .map(() => (
+        <>
+          <span
+            class={`text-9xl font-extrabold font-sans hover:font-extralight transition-all duration-300`}
+          >
+            Hi.
+          </span>
+        </>
+      ))
+  }
+  <span class="text-9xl font-extralight">Cloud.</span>
+  <span class="text-9xl font-extralight">Infrastructure.</span>
+  {
+    Array(25)
+      .fill(1)
+      .map(() => (
+        <>
+          <span
+            class={`text-9xl font-extrabold font-sans hover:font-extralight transition-all duration-300`}
+          >
+            Bye.
+          </span>
+        </>
+      ))
+  }
+  <a
+    target="_blank"
+    href="https://github.com/MuhammadPen"
+    class="text-9xl font-extralight underline hover:font-extrabold transition-all duration-300"
+    >Github.</a
+  >
+  {
+    Array(25)
+      .fill(1)
+      .map(() => (
+        <>
+          <span
+            class={`text-9xl font-extrabold font-sans hover:font-extralight transition-all duration-300`}
+          >
+            Bye.
+          </span>
+        </>
+      ))
+  }
+  <a
+    target="_blank"
+    href="https://www.linkedin.com/in/muhammad-fayyaz-35a598125/"
+    class="text-9xl font-extralight underline hover:font-extrabold transition-all duration-300"
+    >Linkedin.</a
+  >
+  {
+    Array(25)
+      .fill(1)
+      .map(() => (
+        <>
+          <span
+            class={`text-9xl font-extrabold font-sans hover:font-extralight transition-all duration-300`}
+          >
+            Bye.
+          </span>
+        </>
+      ))
+  }
+</div>
