period after name

--- a/src/pages/components/Information.astro
+++ b/src/pages/components/Information.astro
@@ -19,7 +19,7 @@
   <a
     href="mailto:muhammadpen@gmail.com"
     class="text-9xl font-extralight underline hover:font-extrabold transition-all duration-300"
-    >Muhammad</a
+    >Muhammad.</a
   >
   {
     Array(25)
