--- a/src/pages/components/Information.astro
+++ b/src/pages/components/Information.astro
@@ -74,7 +74,7 @@
           <span
             class={`text-9xl font-extrabold font-sans hover:font-extralight transition-all duration-300`}
           >
-            Bye.
+            Hi.
           </span>
         </>
       ))
@@ -103,6 +103,25 @@
     href="https://www.linkedin.com/in/muhammad-fayyaz-35a598125/"
     class="text-9xl font-extralight underline hover:font-extrabold transition-all duration-300"
     >Linkedin.</a
+  >
+  {
+    Array(25)
+      .fill(1)
+      .map(() => (
+        <>
+          <span
+            class={`text-9xl font-extrabold font-sans hover:font-extralight transition-all duration-300`}
+          >
+            Bye.
+          </span>
+        </>
+      ))
+  }
+  <a
+    target="_blank"
+    href="/resume.pdf"
+    class="text-9xl font-extralight underline hover:font-extrabold transition-all duration-300"
+    >Resume.</a
   >
   {
     Array(25)
