--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -12,13 +12,30 @@ import ProjectShowcase from "../components/projectShowcase.astro";
       slides={[
         {
           image: "/1mindFirst.png",
-          description: `1mind is an AI agent company. They specialize in creating both realistic and unrealistic ai avatars which can be trained
-on your voice and mannerisms in few minutes. They can be used as sales representatives, information providers,
-customer support agents and pretty much anywhere you would want customer interaction. `,
+          description: `1mind is an AI agent company.
+They specialize in creating both realistic and unrealistic ai avatars which can be trained
+on your voice and mannerisms in few minutes.
+They can be used as sales representatives, information providers, customer support agents and pretty much anywhere you would want customer interaction. `,
         },
         {
           image: "/1mindSecond.png",
-          description: `I worked here as a fullstack engineer and cloud architect. helped create their zoom integration. built and managed parts of their aws and gcp cloud infrastructure. built and optimized apis. carried out migration from aws to gcp. worked on their admin dashboard and control panel.`,
+          description: `I worked here as a fullstack engineer and cloud architect.
+          helped create their zoom integration.
+          built and managed parts of their aws and gcp cloud infrastructure.
+          built and optimized apis.
+          carried out migration from aws to gcp.
+          worked on their admin dashboard and control panel.`,
+        },
+        {
+          description: `tech i used:`,
+        },
+        {
+          description: `typescript.bash.
+aws.gcp.pulumi.docker.
+nodejs.fastify.express.
+react.styled components.tailwind.mui.
+turborepo.git.workflows.
+openai.anthropic.`,
         },
       ]}
     />
