--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -39,5 +39,60 @@ openai.anthropic.`,
         },
       ]}
     />
+    <ProjectShowcase
+      color="#369482"
+      title="peaque"
+      link="https://peaque.io"
+      slides={[
+        {
+          image: "/peaqueFirst.png",
+          description: `peaque.io is an online book reading platform mixed with social media features. you can leave public notes/comments on any part of a book and people can react and reply to your notes. alongside that you can also create your own library, add custom artwork and chat with characters from the books (using ai).`,
+        },
+        {
+          image: "/peaqueSecond.png",
+          description: `i led a small team of 2 engineers and we built this entire platform from scratch. i worked as a fullstack engineer. built and implemented a custom version of an open source reading library(https://github.com/d-i-t-a/R2D2BC). designed the app architecture. built a fully response interface with my teammates. built the mobile app for this platform.`,
+        },
+        {
+          description: `tech i used:`,
+        },
+        {
+          description: `typscript.
+gcp.firebase.cloud functions.
+nodejs.express.
+react.react native.styled components.
+zustand.git.workflows.
+react helmet.`,
+        },
+      ]}
+    />
+    <ProjectShowcase
+      color="#2958F6"
+      title="sesha-systems"
+      link="https://sesha-systems.com"
+      slides={[
+        {
+          image: "/seshaSystemsFirst.png",
+          description: `sesha systems is a multi-tenant article generation and editing tool. it allows users to provide 1 or more links to news articles. and then generates a new article based on the provided links. It can also be used to summarize news. it contains a full article management system with features version control, archiving, cross-org sharing, exporting and real time updates. `,
+        },
+        {
+          image: "/seshaSystemsSecond.png",
+          description: `I worked as a fullstack engineer and cloud architect. built the application architecture including the article generation pipeline. created in-house tooling which included a custom syntax parser that our ai engineer used to create and edit prompts in real time.
+implemented multi-tenancy. built the user interface with real time article generation updates.`,
+        },
+        {
+          description: `tech i used:`,
+        },
+        {
+          description: `typscript.
+aws.pulumi.docker.
+nodejs.express.websockets.
+react.tailwind.mui.
+zustand.git.workflows.
+openai.anthropic.googleapi.`,
+        },
+      ]}
+    />
   </div>
 </BaseLayout>
+
+<script></script>
